//package edu.austral.ingsis.math;
//
//public class MathEngine {
//
//
//  public  Function formulateFunction(String function) {
//}
