package edu.austral.ingsis.math.function;

import java.util.List;
import java.util.Map;

public interface Function {

      Double solve();

      List<String> getVariables();

      String print();

}
